# FastAPI-Base

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  EMAIL_GUIDE.md  FILTERING_GUIDE.md  LOGGING.md  MEDIA_STORAGE_GUIDE.md  OAUTH_SETUP.md  QUICKSTART.md  RATE_LIMITING.md  README.md  SAAS_DEVELOPMENT_PLAN.md  add_enum_fk.py  alembic.ini  create_enum_table.py  docker-compose.dev.yml  docker-compose.yml  examples.http  init-db.sql  main.py  pyproject.toml  test_auth.py  test_filters.py  test_rate_limit.py  test_seguros_portal.py  test_websocket.py
.claude/: settings.local.json
ChatStudio/: API_SURFACE.md  ARCHITECTURE_DECISION.md  CONTROL_PLANE.md  PLAN_DESARROLLO.md
admin-ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
alembic/: env.py
app/: config.py
design-system/: MASTER.md
docs/: ARCHITECTURE.md  BASE_SERVICE_ARCHITECTURE.md  BILLING.md  DEPLOYMENT.md  DOCKER_SETUP.md  EXAMPLE_POST_MODEL.md  MIGRATIONS_GUIDE.md  OPERATIONS.md  QUEUE_SYSTEM.md  REDIS_GUIDE.md  WEBHOOKS.md  WEBSOCKET_GUIDE.md
monitoring/: grafana-dashboard.json
portal-ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
scripts/: README.md  backup.sh  db-maintenance.sh  restore.sh
seguros/: PLAN_IMPLEMENTACION.md  db.md
tests/: conftest.py  test_admin.py  test_api.py  test_api_keys.py  test_audit.py  test_auth.py  test_auth_enhanced.py  test_billing.py  test_e2e_saas_journey.py  test_email.py  test_filters.py  test_gdpr.py  test_plan_guards.py  test_rate_limit_tenant.py  test_security.py  (+3 more)
(+254 files in other folders)
